Bug 324915 -- fix crash printing iframes by adding null check. r+sr=roc.